--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   padding-top: 2rem;
   padding-bottom: 2rem;
   box-sizing: border-box;
+  font-style: oblique;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
   div{
