--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   padding-bottom: 2rem;
   box-sizing: border-box;
   font-style: oblique;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:'Times New Roman', Times, serif;
   }
 
   div{
@@ -72,10 +72,12 @@
 
   img{
     align-items: center;
-    padding-bottom: 2px;
+    margin-top: 0px;
+    padding-bottom: 5px;
     border-radius: 50%;
     height: 200px;
     width: 200px;
+
   }
 
   h6{
