--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
 </style>  
 </head>
 <body>
-    <div class="card" align="center"><h1 align="center">Cricket Fantasy Dreamer Girl</h1>
+  <a href="https://telegram.me/+-jRkGM8KC1lkNmU0">
+    <div class="card" align="center"><h1 align="center">Cricket Fantasy Dreamer Riya</h1>
         <br>
         <img src="./Riya.jpg" alt="" srcset="">
         
@@ -167,6 +168,7 @@
         <h4 align="center">It's all here</h4>
         <h6 align="center">Click on the Button and <br> Join your Favorite Telegram Channel</h3>
     </div>
+    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
